@@ -1,5 +1,7 @@
 0.43 2020-04-01
-  - remove EXPERIMENTAL status from execute method prepare_attr option.
+  - fix insert, update, select columns key order
+  - reimplement reuse option. In this implementation, only statement handle is cahced in same sql.
+  - remove EXPERIMENTAL execute method prepare_attr option because reuse option can't cache this attributes.
   - remove EXPERIMENTAL exceute method query option because implementation is too buggy.
   - remove EXPERIMENTAL create_result method because this is needed for exceute method query option.
 0.42 2019-10-15
